llang_simpleParser.cpp

// Generated from ../antlr/llang_simple.g4 by ANTLR 4.11.1


#include "llang_simpleListener.h"
#include "llang_simpleVisitor.h"

#include "llang_simpleParser.h"


using namespace antlrcpp;
using namespace llang;

using namespace antlr4;

namespace {

struct Llang_simpleParserStaticData final {
  Llang_simpleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Llang_simpleParserStaticData(const Llang_simpleParserStaticData&) = delete;
  Llang_simpleParserStaticData(Llang_simpleParserStaticData&&) = delete;
  Llang_simpleParserStaticData& operator=(const Llang_simpleParserStaticData&) = delete;
  Llang_simpleParserStaticData& operator=(Llang_simpleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag llang_simpleParserOnceFlag;
Llang_simpleParserStaticData *llang_simpleParserStaticData = nullptr;

void llang_simpleParserInitialize() {
  assert(llang_simpleParserStaticData == nullptr);
  auto staticData = std::make_unique<Llang_simpleParserStaticData>(
    std::vector<std::string>{
      "application", "listExpression", "valueExpression", "listContent", 
      "identifier"
    },
    std::vector<std::string>{
      "", "", "", "'['", "']'", "'('", "')'", "':'", "';'", "'->'", "'<'", 
      "'>'", "'@'", "','", "'++'", "'='", "'del'", "'~'", "'&'", "'''", 
      "'#'"
    },
    std::vector<std::string>{
      "", "NumericLiteral", "Identifier", "OpenBracket", "CloseBracket", 
      "OpenParen", "CloseParen", "Colon", "SemiColon", "SelectArrow", "Push", 
      "Pop", "GlobalList", "Comma", "SelfPlus", "Assign", "DeleteWord", 
      "Delete", "Connect", "Seperator", "FilePrefix", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  llang_simpleParserStaticData = staticData.release();
}

}

llang_simpleParser::llang_simpleParser(TokenStream *input) : llang_simpleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

llang_simpleParser::llang_simpleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  llang_simpleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *llang_simpleParserStaticData->atn, llang_simpleParserStaticData->decisionToDFA, llang_simpleParserStaticData->sharedContextCache, options);
}

llang_simpleParser::~llang_simpleParser() {
  delete _interpreter;
}

const atn::ATN& llang_simpleParser::getATN() const {
  return *llang_simpleParserStaticData->atn;
}

std::string llang_simpleParser::getGrammarFileName() const {
  return "llang_simple.g4";
}

const std::vector<std::string>& llang_simpleParser::getRuleNames() const {
  return llang_simpleParserStaticData->ruleNames;
}

const dfa::Vocabulary& llang_simpleParser::getVocabulary() const {
  return llang_simpleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView llang_simpleParser::getSerializedATN() const {
  return llang_simpleParserStaticData->serializedATN;
}


//----------------- ApplicationContext ------------------------------------------------------------------

llang_simpleParser::ApplicationContext::ApplicationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<llang_simpleParser::ListContentContext *> llang_simpleParser::ApplicationContext::listContent() {
  return getRuleContexts<llang_simpleParser::ListContentContext>();
}

llang_simpleParser::ListContentContext* llang_simpleParser::ApplicationContext::listContent(size_t i) {
  return getRuleContext<llang_simpleParser::ListContentContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::ApplicationContext::Comma() {
  return getTokens(llang_simpleParser::Comma);
}

tree::TerminalNode* llang_simpleParser::ApplicationContext::Comma(size_t i) {
  return getToken(llang_simpleParser::Comma, i);
}


size_t llang_simpleParser::ApplicationContext::getRuleIndex() const {
  return llang_simpleParser::RuleApplication;
}

void llang_simpleParser::ApplicationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterApplication(this);
}

void llang_simpleParser::ApplicationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitApplication(this);
}


std::any llang_simpleParser::ApplicationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitApplication(this);
  else
    return visitor->visitChildren(this);
}

llang_simpleParser::ApplicationContext* llang_simpleParser::application() {
  ApplicationContext *_localctx = _tracker.createInstance<ApplicationContext>(_ctx, getState());
  enterRule(_localctx, 0, llang_simpleParser::RuleApplication);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1572526) != 0) {
      setState(11);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == llang_simpleParser::Comma) {
        setState(10);
        match(llang_simpleParser::Comma);
      }
      setState(13);
      listContent();
      setState(18);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListExpressionContext ------------------------------------------------------------------

llang_simpleParser::ListExpressionContext::ListExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t llang_simpleParser::ListExpressionContext::getRuleIndex() const {
  return llang_simpleParser::RuleListExpression;
}

void llang_simpleParser::ListExpressionContext::copyFrom(ListExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DeleteExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::DeleteExpressionContext::Delete() {
  return getToken(llang_simpleParser::Delete, 0);
}

tree::TerminalNode* llang_simpleParser::DeleteExpressionContext::DeleteWord() {
  return getToken(llang_simpleParser::DeleteWord, 0);
}

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::DeleteExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::DeleteExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::DeleteExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::DeleteExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::DeleteExpressionContext::DeleteExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::DeleteExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeleteExpression(this);
}
void llang_simpleParser::DeleteExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeleteExpression(this);
}

std::any llang_simpleParser::DeleteExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitDeleteExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DefineExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::DefineExpressionContext::Colon() {
  return getToken(llang_simpleParser::Colon, 0);
}

std::vector<llang_simpleParser::IdentifierContext *> llang_simpleParser::DefineExpressionContext::identifier() {
  return getRuleContexts<llang_simpleParser::IdentifierContext>();
}

llang_simpleParser::IdentifierContext* llang_simpleParser::DefineExpressionContext::identifier(size_t i) {
  return getRuleContext<llang_simpleParser::IdentifierContext>(i);
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::DefineExpressionContext::valueExpression() {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(0);
}

std::vector<tree::TerminalNode *> llang_simpleParser::DefineExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::DefineExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::DefineExpressionContext::DefineExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::DefineExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefineExpression(this);
}
void llang_simpleParser::DefineExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefineExpression(this);
}

std::any llang_simpleParser::DefineExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitDefineExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RunExpressionContext ------------------------------------------------------------------

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::RunExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::RunExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::RunExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::RunExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::RunExpressionContext::RunExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::RunExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRunExpression(this);
}
void llang_simpleParser::RunExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRunExpression(this);
}

std::any llang_simpleParser::RunExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitRunExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::AssignmentExpressionContext::Assign() {
  return getToken(llang_simpleParser::Assign, 0);
}

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::AssignmentExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::AssignmentExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::AssignmentExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::AssignmentExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::AssignmentExpressionContext::AssignmentExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::AssignmentExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentExpression(this);
}
void llang_simpleParser::AssignmentExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentExpression(this);
}

std::any llang_simpleParser::AssignmentExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitAssignmentExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::ParenExpressionContext::OpenParen() {
  return getToken(llang_simpleParser::OpenParen, 0);
}

llang_simpleParser::ListExpressionContext* llang_simpleParser::ParenExpressionContext::listExpression() {
  return getRuleContext<llang_simpleParser::ListExpressionContext>(0);
}

tree::TerminalNode* llang_simpleParser::ParenExpressionContext::CloseParen() {
  return getToken(llang_simpleParser::CloseParen, 0);
}

llang_simpleParser::ParenExpressionContext::ParenExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::ParenExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenExpression(this);
}
void llang_simpleParser::ParenExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenExpression(this);
}

std::any llang_simpleParser::ParenExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitParenExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PopExpressionContext ------------------------------------------------------------------

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::PopExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::PopExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::PopExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::PopExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::PopExpressionContext::Pop() {
  return getTokens(llang_simpleParser::Pop);
}

tree::TerminalNode* llang_simpleParser::PopExpressionContext::Pop(size_t i) {
  return getToken(llang_simpleParser::Pop, i);
}

llang_simpleParser::PopExpressionContext::PopExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::PopExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPopExpression(this);
}
void llang_simpleParser::PopExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPopExpression(this);
}

std::any llang_simpleParser::PopExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitPopExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SelfPlusExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::SelfPlusExpressionContext::SelfPlus() {
  return getToken(llang_simpleParser::SelfPlus, 0);
}

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::SelfPlusExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::SelfPlusExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::SelfPlusExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::SelfPlusExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::SelfPlusExpressionContext::SelfPlusExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::SelfPlusExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelfPlusExpression(this);
}
void llang_simpleParser::SelfPlusExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelfPlusExpression(this);
}

std::any llang_simpleParser::SelfPlusExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitSelfPlusExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PushExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::PushExpressionContext::Push() {
  return getToken(llang_simpleParser::Push, 0);
}

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::PushExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::PushExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::PushExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::PushExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::PushExpressionContext::PushExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::PushExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPushExpression(this);
}
void llang_simpleParser::PushExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPushExpression(this);
}

std::any llang_simpleParser::PushExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitPushExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SelectExpressionContext ------------------------------------------------------------------

tree::TerminalNode* llang_simpleParser::SelectExpressionContext::SelectArrow() {
  return getToken(llang_simpleParser::SelectArrow, 0);
}

std::vector<llang_simpleParser::ValueExpressionContext *> llang_simpleParser::SelectExpressionContext::valueExpression() {
  return getRuleContexts<llang_simpleParser::ValueExpressionContext>();
}

llang_simpleParser::ValueExpressionContext* llang_simpleParser::SelectExpressionContext::valueExpression(size_t i) {
  return getRuleContext<llang_simpleParser::ValueExpressionContext>(i);
}

std::vector<tree::TerminalNode *> llang_simpleParser::SelectExpressionContext::Seperator() {
  return getTokens(llang_simpleParser::Seperator);
}

tree::TerminalNode* llang_simpleParser::SelectExpressionContext::Seperator(size_t i) {
  return getToken(llang_simpleParser::Seperator, i);
}

llang_simpleParser::SelectExpressionContext::SelectExpressionContext(ListExpressionContext *ctx) { copyFrom(ctx); }

void llang_simpleParser::SelectExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectExpression(this);
}
void llang_simpleParser::SelectExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<llang_simpleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectExpression(this);
}

std::any llang_simpleParser::SelectExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<llang_simpleVisitor*>(visitor))
    return parserVisitor->visitSelectExpression(this);
  else
    return visitor->visitChildren(this);
}
llang_simpleParser::ListExpressionContext* llang_simpleParser::listExpression() {
  ListExpressionContext *_localctx = _tracker.createInstance<ListExpressionContext>(_ctx, getState());
  enterRule(_localctx, 2, llang_simpleParser::RuleListExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<llang_simpleParser::DefineExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(19);
      antlrcpp::downCast<DefineExpressionContext *>(_localctx)->identifierContext = identifier();
      antlrcpp::downCast<DefineExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<DefineExpressionContext *>(_localctx)->identifierContext);
      setState(24);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(20);
        match(llang_simpleParser::Seperator);
        setState(21);
        antlrcpp::downCast<DefineExpressionContext *>(_localctx)->identifierContext = identifier();
        antlrcpp::downCast<DefineExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<DefineExpressionContext *>(_localctx)->identifierContext);
        setState(26);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(27);
      match(llang_simpleParser::Colon);
      setState(28);
      antlrcpp::downCast<DefineExpressionContext *>(_localctx)->right = valueExpression(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<llang_simpleParser::PopExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(30);
      antlrcpp::downCast<PopExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
      antlrcpp::downCast<PopExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<PopExpressionContext *>(_localctx)->valueExpressionContext);
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(31);
        match(llang_simpleParser::Seperator);
        setState(32);
        antlrcpp::downCast<PopExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
        antlrcpp::downCast<PopExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<PopExpressionContext *>(_localctx)->valueExpressionContext);
        setState(37);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(39); 
      _errHandler->sync(this);
      _la = _input->LA(1);
      do {
        setState(38);
        match(llang_simpleParser::Pop);
        setState(41); 
        _errHandler->sync(this);
        _la = _input->LA(1);
      } while (_la == llang_simpleParser::Pop);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<llang_simpleParser::PushExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(43);
      antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
      antlrcpp::downCast<PushExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext);
      setState(48);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(44);
        match(llang_simpleParser::Seperator);
        setState(45);
        antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
        antlrcpp::downCast<PushExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext);
        setState(50);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(51);
      match(llang_simpleParser::Push);
      setState(52);
      antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
      antlrcpp::downCast<PushExpressionContext *>(_localctx)->right.push_back(antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext);
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(53);
        match(llang_simpleParser::Seperator);
        setState(54);
        antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
        antlrcpp::downCast<PushExpressionContext *>(_localctx)->right.push_back(antlrcpp::downCast<PushExpressionContext *>(_localctx)->valueExpressionContext);
        setState(59);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<llang_simpleParser::SelectExpressionContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(60);
      antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
      antlrcpp::downCast<SelectExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext);
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(61);
        match(llang_simpleParser::Seperator);
        setState(62);
        antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
        antlrcpp::downCast<SelectExpressionContext *>(_localctx)->left.push_back(antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext);
        setState(67);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(68);
      match(llang_simpleParser::SelectArrow);
      setState(69);
      antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
      antlrcpp::downCast<SelectExpressionContext *>(_localctx)->right.push_back(antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext);
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == llang_simpleParser::Seperator) {
        setState(70);
        match(llang_simpleParser::Seperator);
        setState(71);
        antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext = valueExpression(0);
        antlrcpp::downCast<SelectExpressionContext *>(_localctx)->right.push_back(antlrcpp::downCast<SelectExpressionContext *>(_localctx)->valueExpressionContext);
        setState(76);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }
